chore: 修改了更新日志的生成类型

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "conventional-changelog-custom-config",
+  "name": "@cao-mei-you-ren/conventional-changelog-custom-config",
   "version": "0.3.1",
   "description": "This preset extends the angular preset",
   "main": "index.js",
   "scripts": {
-    "commit": "git-cz && git push",
+    "commit": "git add . && git-cz",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -r 0 -n ./index.js",
     "release": "release-it",
     "test-windows": "mocha --timeout 30000"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ITxiaohao/conventional-changelog-custom-config.git"
+    "url": "git+https://github.com/CaoMeiYouRen/conventional-changelog-custom-config.git"
   },
   "config": {
     "commitizen": {
@@ -25,12 +25,12 @@
     "changelog",
     "emoji"
   ],
-  "author": "Zeng Shunhao <shunhaozeng@gmail.com>",
+  "author": "CaoMeiYouRen <caomeiyouren@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ITxiaohao/conventional-changelog-custom-config/issues"
+    "url": "https://github.com/CaoMeiYouRen/conventional-changelog-custom-config/issues"
   },
-  "homepage": "https://github.com/ITxiaohao/conventional-changelog-custom-config#readme",
+  "homepage": "https://github.com/CaoMeiYouRen/conventional-changelog-custom-config#readme",
   "devDependencies": {
     "better-than-before": "^1.0.0",
     "chai": "^4.2.0",
