--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cao-mei-you-ren/conventional-changelog-custom-config",
-  "version": "0.3.1",
+  "version": "0.4.0-beta",
   "description": "This preset extends the angular preset",
   "main": "index.js",
   "scripts": {
