chore: 修改了包名称

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cao-mei-you-ren/conventional-changelog-custom-config",
+  "name": "conventional-changelog-cmyr-config",
   "version": "0.4.0-beta",
   "description": "This preset extends the angular preset",
   "main": "index.js",
