--- a/package.json
+++ b/package.json
@@ -35,20 +35,21 @@
     "better-than-before": "^1.0.0",
     "chai": "^4.2.0",
     "commitizen": "^3.1.1",
+    "compare-func": "^1.3.2",
     "conventional-changelog-cli": "^2.0.21",
     "conventional-changelog-core": "^3.2.2",
     "coveralls": "^3.0.4",
     "cz-conventional-changelog": "^2.1.0",
+    "debug": "^4.1.1",
     "git-dummy-commit": "^1.3.0",
+    "github-url-from-git": "^1.5.0",
     "istanbul": "^0.4.5",
     "jscs": "^3.0.7",
     "jshint": "^2.10.2",
     "mocha": "*",
+    "q": "^1.5.1",
     "shelljs": "^0.8.3",
-    "through2": "^3.0.1",
-    "github-url-from-git": "^1.5.0",
-    "compare-func": "^1.3.2",
-    "q": "^1.5.1"
+    "through2": "^3.0.1"
   },
   "changelog": {
     "emojis": true,
