--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "conventional-changelog-cmyr-config",
-  "version": "1.1.0",
+  "version": "1.2.0-beta",
   "description": "This preset extends the angular preset",
   "main": "index.js",
   "scripts": {
